<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.pak.mireaproject.ui.browser.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.pak.mireaproject.ui.gameslist.GameslistFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gameslist" />

    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.pak.mireaproject.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.pak.mireaproject.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.pak.mireaproject.ui.sensor.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_micro"
        android:name="ru.mirea.pak.mireaproject.ui.micro.MicroFragment"
        android:label="@string/menu_micro"
        tools:layout="@layout/fragment_micro" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.pak.mireaproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.pak.mireaproject.ui.Info.InfoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_info" />
</navigation>